syntax = "proto3";

option java_multiple_files = true;
option  java_package = "com.me.models";

message MetaRequest {
}

message MetaResponse {
  string result = 1;
}

service MetadataService {
  rpc metadataTest(MetaRequest) returns (MetaResponse);
}
